# socketui

./: CMakeLists.txt  README.md
qml/: main.qml
src/: main.cpp  messagelistmodel.cpp  messagelistmodel.h  messagemodel.cpp  messagemodel.h  rootstate.cpp  rootstate.h  websocketclient.cpp  websocketclient.h
